kubernetes/apps/kube-system/kubernetes-dashboard/app/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`kubernetes.local.${SECRET_DOMAIN}`)
      services:
        - name: kubernetes-dashboard
          port: https
          scheme: https
      middlewares:
        - name: secure-networks
          namespace: networking
  tls:
    secretName: kubernetes-dashboard-tls-production
